# acd2lr

./: .gitignore  Cargo.toml  Makefile  README.md  installer.nsi
.github/workflows/: build.yml
acd2lr/: Cargo.toml  acd2lr.exe.manifest  acd2lr.rc  build.rs
acd2lr-core/: Cargo.toml
acd2lr-core/src/: acdsee.rs  container.rs  file.rs  lib.rs  ns.rs  xmp.rs  xpacket.rs
acd2lr-core/src/xmp/: rule.rs
acd2lr-core/tests/: file.rs  xmp.rs
acd2lr-core/tests/data/: acdsee_data.xpacket  lightroom_data.xpacket
acd2lr/src/: main.rs  svc.rs  tr.rs  ui.rs
acd2lr/src/svc/: state.rs
acd2lr/src/svc/state/: file_state.rs  metadata_file.rs
acd2lr/src/ui/: main.glade  row_data.rs
tools/: copy-deps.sh  copy-dlls.sh  deploy-theme.sh
